# AjedrezTEO

./: CMakeLists.txt  CMakeLists.txt.user.296f3d1  CMakeLists.txt.user.87f0e42  README.md  bishop.cpp  board.ui  chessboard.cpp  chessboard.h  chessbox.cpp  chessbox.h  chesspiece.cpp  game.cpp  game.h  hueco.cpp  hueco.h  hueco.ui  king.cpp  knight.cpp  main.cpp  mainwindow.h  mainwindow.ui  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  resource.qrc  rook.cpp  table.cpp  table.h  table.ui  tablero.h
